created zoom effect when hovering over img in css

--- a/Basic_HTML_and_JavaScript_1/challenges/challenges.css
+++ b/Basic_HTML_and_JavaScript_1/challenges/challenges.css
@@ -71,3 +71,14 @@ p {
 .formContainer .btn:hover, .openButton:hover {
     opacity: 1;
 }
+
+.zoom {
+    padding: 50px;
+    width: 200px;
+    height: 200px;
+}
+
+.zoom:hover {
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
+}
