--- a/Basic_HTML_and_JavaScript_1/challenges/challenges.css
+++ b/Basic_HTML_and_JavaScript_1/challenges/challenges.css
@@ -1,10 +1,14 @@
+html {
+    scroll-behavior: smooth;
+}
+
 h1 {
-    font-size: 1.1vw;
+    font-size: 1.5vw;
 }
 
 p {
     animation-name: fadein;
-    animation-duration: 3s;
+    animation-duration: 10s;
 }
 
 @keyframes fadein {
