made popup form sticky

--- a/Basic_HTML_and_JavaScript_1/challenges/challenge1/challenges.css
+++ b/Basic_HTML_and_JavaScript_1/challenges/challenge1/challenges.css
@@ -23,6 +23,8 @@ p {
     border: none;
     cursor: pointer;
     opacity: .8;
+    position: -webkit-sticky;
+    position: sticky;
     position: fixed;
     bottom: 23px;
     right: 28px;
