--- a/Herbal Harbor/css/style.css
+++ b/Herbal Harbor/css/style.css
@@ -1,3 +1,48 @@
+/* Header Styles */
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #f8f8f8; /* Light gray background color */
+}
+
+.company-name {
+    font-family: 'Roboto', cursive;
+    font-size: 36px;
+    color: #3a5a40;
+    margin: 0;
+}
+
+.current-page {
+    font-weight: bold;
+    font-size: 36px;
+    color: #3a5a40;
+    margin: 0;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.nav-container ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.nav-container ul li {
+    margin: 0 10px;
+    display: inline;
+}
+
+.nav-container ul li a {
+    text-decoration: none;
+    color: #3a5a40;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+/*PRODUCT CARDS*/
 .tea-container {
     display: flex;
     flex-wrap: wrap;
