--- a/Herbal Harbor/css/style.css
+++ b/Herbal Harbor/css/style.css
@@ -43,6 +43,35 @@
 }
 
 /* HOME CARDS */
+.home-about h2 {
+    text-align: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.home-about {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.home-card {
+    background-color: #c8e6c9;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    width: 30%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.home-card h3 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+.home-card p {
+    font-size: 1.5em;
+}
 
 /* PRODUCT CARDS */
 .tea-container {
