added content to home page
added more content to "featured" section of the home page and styled using same styles as products page.

--- a/Herbal Harbor/css/style.css
+++ b/Herbal Harbor/css/style.css
@@ -43,6 +43,12 @@
 }
 
 /* HOME CARDS */
+.home-featured h2 {
+    text-align: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
 .home-about h2 {
     text-align: center;
     width: 100%;
