--- a/Herbal Harbor/css/style.css
+++ b/Herbal Harbor/css/style.css
@@ -14,14 +14,14 @@ body {
 
 .company-name {
     font-family: 'Roboto', cursive;
-    font-size: 36px;
+    font-size: 3em;
     color: #3a5a40;
     margin: 0;
 }
 
 .current-page {
     font-weight: bold;
-    font-size: 36px;
+    font-size: 2.1em;
     color: #3a5a40;
     margin: 0;
     display: inline-block;
@@ -89,6 +89,60 @@ body {
 .home-card p {
     color: #3a5a40;
     font-size: 1.5em;
+}
+
+/* ABOUT */
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.column {
+    flex: 50%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.column img {
+    height: 30em;
+    width: auto;
+    border-radius: 3%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.about-history h2 {
+    font-size: 2em;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.about-history p {
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.about-evolution h2 {
+    font-size: 2em;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.about-evolution p {
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.about-future h2 {
+    font-size: 2em;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.about-future p {
+    font-size: 1.5em;
+    text-align: center;
 }
 
 /* PRODUCT CARDS */
