--- a/Herbal Harbor/css/style.css
+++ b/Herbal Harbor/css/style.css
@@ -91,6 +91,58 @@ body {
     font-size: 1.5em;
 }
 
+/* HOME NEWSLETTER */
+.home-signup {
+    background-color: #3a5a40;
+    color: #ffffcc;
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    align-items: center;
+    width: 75vw;
+    height: 65vh;
+  }
+  
+  .signup-container {
+    max-width: 400px;
+    text-align: center;
+  }
+  
+  .signup-container h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .signup-container label,
+  .signup-container input {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .signup-container input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .signup-container input[type="submit"] {
+    background-color: #ffffcc;
+    color: #3a5a40;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .signup-container input[type="submit"]:hover {
+    background-color: #e6e6b5;
+  }
+  
+
 /* ABOUT */
 .row {
     display: flex;
