--- a/Herbal Harbor/css/style.css
+++ b/Herbal Harbor/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Roboto', cursive;
     background-color: #ffffcc;
+    min-height: 100vh;
 }
 
 /* HEADER STYLES */
@@ -102,7 +103,6 @@ body {
     margin-right: auto;
     justify-content: center;
     align-items: center;
-    width: 75vw;
     height: 65vh;
   }
   
@@ -312,4 +312,52 @@ a:hover {
     font-size: 14px;
     margin-top: 10px;
     color: #fff;
+}
+
+/* CONTACT */
+.contact {
+    background-color: #3a5a40;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 75vw;
+    min-height: 100vh;
+    margin: 10px auto;
+}
+
+.contact h2, .contact p {
+    text-align: center;
+    color: #ffffcc;
+}
+
+.contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact label {
+    color: #ffffcc;
+}
+
+.contact label, .contact textarea, .contact input {
+    margin: 5px 0;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+
+}
+
+.contact textarea {
+    width: 80%;
+}
+
+.contact button {
+    padding: 10px 20px;
+    background-color: #ffffcc;
+    color: #3a5a40;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
 }
